# stellar-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  core_implementation.yml  feature_request.yml
.github/workflows/: generic.yml
contracts/token/fungible/: Cargo.toml
contracts/token/fungible/src/: fungible.rs  impl_token_interface_macro.rs  lib.rs  storage.rs  test.rs
contracts/token/fungible/src/test/: event_utils.rs
contracts/token/fungible/test_snapshots/test/: approve_and_transfer_from.1.json  approve_handles_expiry.1.json  approve_with_event.1.json  extend_balance_ttl_thru_transfer.1.json  initial_state.1.json  spend_allowance_insufficient_allowance_fails.1.json  transfer_from_insufficient_allowance_fails.1.json  transfer_insufficient_balance_fails.1.json  transfer_works.1.json  update_burns_tokens.1.json  update_mints_tokens.1.json  update_overflow_panics.1.json  (+2 more)
contracts/token/non-fungible/: Cargo.toml
contracts/token/non-fungible/src/: lib.rs  non_fungible.rs  storage.rs  test.rs
contracts/utils/pausable/: Cargo.toml
contracts/utils/pausable-macros/: Cargo.toml
contracts/utils/pausable-macros/src/: helper.rs  lib.rs
contracts/utils/pausable/src/: lib.rs  pausable.rs  storage.rs  test.rs
docs/: README.md  antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: get-started.adoc  index.adoc
docs/modules/ROOT/templates/: token_template.adoc
examples/fungible-capped/: Cargo.toml
examples/fungible-capped/src/: contract.rs  test.rs
examples/fungible-pausable/: Cargo.toml
examples/fungible-pausable/src/: contract.rs  contract_token_interface.rs  lib.rs  test.rs
examples/fungible-pausable/test_snapshots/test/: initial_state.1.json  mint_works.1.json  transfer_fails_when_paused.1.json  transfer_from_fails_when_paused.1.json  transfer_works.1.json
examples/fungible-token-interface/: Cargo.toml
examples/fungible-token-interface/src/: contract.rs
examples/fungible-token-interface/test_snapshots/test/: burn_works.1.json  mint_fails_when_paused.1.json  transfer_from_works.1.json
examples/nft-consecutive/: Cargo.toml
examples/nft-consecutive/src/: contract.rs  test.rs
examples/nft-consecutive/test_snapshots/test/: consecutive_batch_mint_works.1.json  consecutive_burn_works.1.json  consecutive_transfer_override_works.1.json
examples/nft-enumerable/: Cargo.toml
examples/nft-enumerable/src/: contract.rs  test.rs
examples/nft-enumerable/test_snapshots/test/: enumerable_burn_works.1.json  enumerable_transfer_override_works.1.json
examples/nft-sequential-minting/: Cargo.toml
examples/nft-sequential-minting/src/: contract.rs  test.rs
examples/nft-sequential-minting/test_snapshots/test/: burn_works.1.json  transfer_works.1.json
examples/pausable/: Cargo.toml
examples/pausable/src/: contract.rs  test.rs
examples/pausable/test_snapshots/test/: errors_emergency_reset_when_not_paused.1.json  errors_increment_when_paused.1.json  errors_pause_unauthorized.1.json  errors_unpause_unauthorized.1.json  initial_state.1.json  test_1.1.json  test_initial_state.1.json  test_pause_errors_unauthorized.1.json  test_pause_works.1.json  test_unpause_errors_unauthorized.1.json  test_unpause_works.1.json  unpause_works.1.json
examples/upgradeable/testdata/: upgradeable_v1_example.wasm  upgradeable_v2_example.wasm
examples/upgradeable/upgrader/: Cargo.toml
examples/upgradeable/upgrader/src/: contract.rs  lib.rs  test.rs
examples/upgradeable/v1/: Cargo.toml
examples/upgradeable/v1/src/: contract.rs  test.rs
examples/upgradeable/v2/: Cargo.toml
examples/upgradeable/v2/src/: contract.rs
(+36 files in other folders)
