[workspace]
resolver = "2"
members = ["contracts/utils/*", "contracts/token/*", "examples/*"]

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/stellar-contracts"
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "22.0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# members
openzeppelin-pausable = { path = "contracts/utils/pausable" }
openzeppelin-pausable-macros = { path = "contracts/utils/pausable-macros" }
openzeppelin-fungible-token = { path = "contracts/token/fungible" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
