[package]
name = "fungible-pausable-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
openzeppelin-pausable = { workspace = true }
openzeppelin-pausable-macros = { workspace = true }
openzeppelin-fungible-token = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
